--- a/blog-detail.html
+++ b/blog-detail.html
@@ -14,6 +14,14 @@
   <title>ブログ詳細 | 合同会社WaJu</title>
   <meta name="description" content="合同会社WaJuのブログ詳細ページです。CARELAYや介護・福祉業界に関する最新情報をお届けします。" />
 
+  <!-- ▼ Favicon / PWAタグ追加（他ページ統一） ▼ -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png?v=1">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png?v=1">
+  <link rel="manifest" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/site.webmanifest?v=1">
+  <meta name="theme-color" content="#0f172a">
+  <!-- ▲ ここまで追加 ▲ -->
+
   <style>
     :root {
       --blue:#0d6efd;
