--- a/blog-detail.html
+++ b/blog-detail.html
@@ -85,6 +85,14 @@
       min-height:48px;
     }
 
+       /* 画像サイズ調整（追加） */
+      .content img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 12px auto;
+      }
+
     /* ---------- タグ ---------- */
     .tags{
       display:flex;
