--- a/blog-detail.html
+++ b/blog-detail.html
@@ -85,93 +85,92 @@
       min-height:48px;
     }
 
-        /* ---------- 本文下地 ---------- */
-        .content h2, .content h3, .content h4 {
-          color:#191c70;
-          font-weight:700;
-          margin-top:1.8em;
-          margin-bottom:0.6em;
-          line-height:1.4;
-        }
-        .content p {
-          margin:1em 0;
-          color:#222;
-          line-height:1.9;
-        }
-        .content ul, .content ol {
-          margin:1em 0 1em 1.6em;
-          line-height:1.8;
-        }
-        .content li { margin-bottom:0.4em; }
-        .content blockquote {
-          background:#f8fafc;
-          border-left:4px solid #06ccfe;
-          border-radius:8px;
-          padding:12px 16px;
-          margin:1.4em 0;
-          color:#333;
-        }
-        .content table {
-          width:100%;
-          border-collapse:collapse;
-          margin:1.2em 0;
-          font-size:0.95em;
-          background:#fff;
-          border:1px solid #d1d5db;
-        }
-        .content th, .content td {
-          border:1px solid #d1d5db;
-          padding:8px 10px;
-          text-align:left;
-        }
-        .content th {
-          background:#e8f4ff;
-          color:#191c70;
-          font-weight:700;
-        }
-        .content .card {
-          background:#fff;
-          border:1px solid #e5e7eb;
-          border-radius:12px;
-          padding:18px;
-          box-shadow:0 2px 6px rgba(0,0,0,0.06);
-          margin:1.6em 0;
-        }
-        .content .highlight {
-          background:linear-gradient(135deg,#f0f6ff,#ffffff);
-          border-left:6px solid #06ccfe;
-          border-radius:10px;
-          padding:14px 18px;
-          margin:1.4em 0;
-        }
-        .content .cta {
-          text-align:center;
-          background:linear-gradient(90deg,#191c70,#06ccfe);
-          color:#fff;
-          padding:18px;
-          border-radius:10px;
-          margin:2em 0;
-          font-weight:700;
-        }
-        .content .cta a {
-          display:inline-block;
-          background:#fff;
-          color:#191c70;
-          font-weight:700;
-          padding:10px 18px;
-          border-radius:9999px;
-          text-decoration:none;
-          margin-top:10px;
-        }
+    /* ---------- 本文下地 ---------- */
+    .content h2, .content h3, .content h4 {
+      color:#191c70;
+      font-weight:700;
+      margin-top:1.8em;
+      margin-bottom:0.6em;
+      line-height:1.4;
+    }
+    .content p {
+      margin:1em 0;
+      color:#222;
+      line-height:1.9;
+    }
+    .content ul, .content ol {
+      margin:1em 0 1em 1.6em;
+      line-height:1.8;
+    }
+    .content li { margin-bottom:0.4em; }
+    .content blockquote {
+      background:#f8fafc;
+      border-left:4px solid #06ccfe;
+      border-radius:8px;
+      padding:12px 16px;
+      margin:1.4em 0;
+      color:#333;
+    }
+    .content table {
+      width:100%;
+      border-collapse:collapse;
+      margin:1.2em 0;
+      font-size:0.95em;
+      background:#fff;
+      border:1px solid #d1d5db;
+    }
+    .content th, .content td {
+      border:1px solid #d1d5db;
+      padding:8px 10px;
+      text-align:left;
+    }
+    .content th {
+      background:#e8f4ff;
+      color:#191c70;
+      font-weight:700;
+    }
+    .content .card {
+      background:#fff;
+      border:1px solid #e5e7eb;
+      border-radius:12px;
+      padding:18px;
+      box-shadow:0 2px 6px rgba(0,0,0,0.06);
+      margin:1.6em 0;
+    }
+    .content .highlight {
+      background:linear-gradient(135deg,#f0f6ff,#ffffff);
+      border-left:6px solid #06ccfe;
+      border-radius:10px;
+      padding:14px 18px;
+      margin:1.4em 0;
+    }
+    .content .cta {
+      text-align:center;
+      background:linear-gradient(90deg,#191c70,#06ccfe);
+      color:#fff;
+      padding:18px;
+      border-radius:10px;
+      margin:2em 0;
+      font-weight:700;
+    }
+    .content .cta a {
+      display:inline-block;
+      background:#fff;
+      color:#191c70;
+      font-weight:700;
+      padding:10px 18px;
+      border-radius:9999px;
+      text-decoration:none;
+      margin-top:10px;
+    }
 
-
-       /* 画像サイズ調整（追加） */
-      .content img {
-        max-width: 100%;
-        height: auto;
-        display: block;
-        margin: 12px auto;
-      }
+    /* 画像サイズ調整 */
+    .content img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 12px auto;
+    }
 
     /* ---------- タグ ---------- */
     .tags{
@@ -329,6 +328,12 @@
       $("#postThumb").alt = (data.title || "サムネイル") + "の画像";
       $("#postContent").innerHTML = data.content || "";
 
+      // ▼ 本文挿入後に外部リンクを_target="_blank"化
+      document.querySelectorAll('.content a[href^="http"]').forEach(a => {
+        a.setAttribute("target", "_blank");
+        a.setAttribute("rel", "noopener noreferrer");
+      });
+
       const tagWrap = $("#postTags");
       tagWrap.innerHTML = "";
       if(Array.isArray(data.tags)){
@@ -366,13 +371,7 @@
         }else{ a.classList.add("disabled"); a.style.opacity=".4"; a.style.pointerEvents="none"; }
       }
     }
-    document.addEventListener("DOMContentLoaded", () => {
-      document.querySelectorAll('.content a[href^="http"]').forEach(a => {
-        a.setAttribute("target", "_blank");
-        a.setAttribute("rel", "noopener noreferrer");
-      });
-    });
-    
+
     load();
   </script>
 </body>
