--- a/connect.html
+++ b/connect.html
@@ -42,14 +42,14 @@
     </section>
 
     <section class="mt-8 space-y-4">
-      <a class="btn block w-full" href="https://waju.co.jp/" target="_blank" rel="noopener">
+      <a class="btn block w-full" href="https://www.waju-llc.com/" target="_blank" rel="noopener">
         <div class="w-full flex items-center gap-3 bg-gray-50 hover:bg-gray-100 border border-gray-200 rounded-2xl p-4 transition">
           <span class="shrink-0 inline-flex w-10 h-10 items-center justify-center rounded-xl bg-waju-primary/10">
             <svg viewBox="0 0 24 24" fill="none" class="w-6 h-6 text-waju-primary"><path stroke="currentColor" stroke-width="1.75" d="M12 21c4.97 0 9-4.03 9-9s-4.03-9-9-9-9 4.03-9 9 4.03 9 9 9Z"/><path stroke="currentColor" stroke-width="1.75" d="M3 12h18M12 3c2.5 2.5 3.75 5.5 3.75 9S14.5 18.5 12 21m0-18C9.5 5.5 8.25 8.5 8.25 12S9.5 18.5 12 21"/></svg>
           </span>
           <div class="grow">
             <p class="font-semibold">公式サイト</p>
-            <p class="text-sm text-slate-500">waju.co.jp</p>
+            <p class="text-sm text-slate-500">waju-llc.com</p>
           </div>
           <span class="chev text-slate-400 transition">→</span>
         </div>
