--- a/proposal.html
+++ b/proposal.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>令和7年度 介護現場におけるハラスメント対策業務 提案書｜合同会社WaJu</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --card-bg: #ffffff;
+      --brand-blue:#1e3a8a;
+      --brand-sky:#2563eb;
+      --brand-sky-2:#60a5fa;
+    }
+    html,body{font-family:'Noto Sans JP',system-ui,-apple-system,Segoe UI,Roboto,'Hiragino Kaku Gothic ProN','Yu Gothic',Meiryo,sans-serif;}
+    .hero-grad{background: linear-gradient(135deg, rgba(30,58,138,.98), rgba(37,99,235,.9) 60%, rgba(96,165,250,.9));}
+    .section-card{background:var(--card-bg)}
+    .section-heading{position:relative;padding-left:.9rem}
+    .section-heading::before{content:"";position:absolute;left:0;top:.3rem;bottom:.3rem;width:.4rem;border-radius:.2rem;background:linear-gradient(180deg,var(--brand-sky),var(--brand-sky-2))}
+    .badge{background:linear-gradient(135deg,#eef2ff,#e0f2fe);border:1px solid #dbeafe}
+    .fade{animation:fadein .5s ease both}
+    @keyframes fadein{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:translateY(0)}}
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800 leading-relaxed">
-  <header class="bg-blue-900 text-white py-6 shadow-md">
-    <div class="max-w-4xl mx-auto text-center">
-      <h1 class="text-2xl md:text-3xl font-bold">令和7年度 介護現場におけるハラスメント対策業務 提案書</h1>
-      <p class="mt-2 text-sm">提出者：合同会社WaJu（代表社員：大野 洋）</p>
+<body class="bg-gradient-to-b from-gray-100 to-blue-50 text-gray-800">
+
+  <!-- HERO -->
+  <header class="hero-grad text-white">
+    <div class="max-w-5xl mx-auto px-5 py-10 md:py-14">
+      <p class="text-xs uppercase tracking-wider text-blue-100">企画提案書（Web版）</p>
+      <h1 class="text-2xl md:text-4xl font-bold mt-2 leading-snug">
+        令和7年度 介護現場におけるハラスメント対策業務
+      </h1>
+      <p class="mt-3 text-sm md:text-base text-blue-100">
+        提出者：合同会社WaJu（代表社員：大野 洋）
+      </p>
+      <div class="mt-6 flex flex-wrap gap-2">
+        <span class="badge text-xs px-3 py-1 rounded-full text-blue-800">基礎研修：オンライン（全8回）</span>
+        <span class="badge text-xs px-3 py-1 rounded-full text-blue-800">実践研修：対面（全3回）</span>
+        <span class="badge text-xs px-3 py-1 rounded-full text-blue-800">CARELAY活用</span>
+      </div>
     </div>
   </header>
 
-  <main class="max-w-4xl mx-auto py-10 px-4 md:px-6 space-y-8 md:space-y-12">
-    
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">1．基本方針・目的</h2>
+  <main class="max-w-5xl mx-auto px-5 py-10 space-y-10 md:space-y-12">
+
+    <!-- 1. 基本方針・目的 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">1．基本方針・目的</h2>
       <p>本事業では、介護・障害福祉現場における利用者・家族からの暴言・暴力・セクシュアルハラスメント等の問題に対し、管理者の意識改革と組織的な対応力の向上を図ることを目的とする。</p>
-      <p class="mt-2">合同会社WaJuは、介護現場経験を持つ代表が中心となり、現場視点に立った<strong>「参加型・実践型研修」</strong>を通じて、離職防止と安全な職場環境づくりを支援する。また、当社が運営するオンラインプラットフォーム「CARELAY」を研修運営の基盤として活用し、市内全域の事業所が時間や場所に制約されず参加できる環境を整える。</p>
+      <p class="mt-2">合同会社WaJuは、介護現場経験を持つ代表が中心となり、現場視点に立った <strong>「参加型・実践型研修」</strong> を通じて、離職防止と安全な職場環境づくりを支援する。また、当社が運営するオンラインプラットフォーム「CARELAY」を研修運営の基盤として活用し、市内全域の事業所が時間や場所に制約されず参加できる環境を整える。</p>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">2．現状の課題認識</h2>
+    <!-- 2. 現状の課題認識 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">2．現状の課題認識</h2>
       <ul class="list-disc list-inside space-y-1">
         <li>利用者や家族によるハラスメントは年々増加傾向にあり、職員のメンタル不調・離職要因となっている。</li>
         <li>管理者が対応マニュアルや相談体制を整備できておらず、個人対応にとどまりやすい。</li>
@@ -31,19 +62,21 @@
       </ul>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">3．研修の実施計画</h2>
-      <h3 class="font-semibold text-blue-700 mt-4">（1）全体方針</h3>
-      <p>講師による一方的な講義ではなく、現場で実際に発生している課題を参加者同士で共有し、対策を学び合う<strong>「参加型」</strong>形式とする。研修前に事業所から「困っていること」や「実際の対応事例」を収集し、それを分析・整理した上で内容を構成する。</p>
+    <!-- 3. 研修の実施計画 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">3．研修の実施計画</h2>
 
-      <h3 class="font-semibold text-blue-700 mt-4">（2）基礎研修（オンライン・全8回）</h3>
+      <h3 class="text-blue-800 font-semibold mt-2">（1）全体方針</h3>
+      <p>講師による一方的な講義ではなく、現場で実際に発生している課題を参加者同士で共有し、対策を学び合う <strong>「参加型」</strong> 形式とする。研修前に事業所から「困っていること」や「実際の対応事例」を収集し、それを分析・整理した上で内容を構成する。</p>
+
+      <h3 class="text-blue-800 font-semibold mt-5">（2）基礎研修（オンライン・全8回）</h3>
       <ul class="list-disc list-inside space-y-1">
         <li><strong>対象：</strong>介護・障害福祉事業所の管理者・リーダー等</li>
         <li><strong>内容：</strong>ハラスメントの基礎知識、法的視点と初期対応、職員支援の重要性</li>
         <li><strong>方法：</strong>1回10分以内の動画（YouTube限定公開）をCARELAY上で配信。資料ダウンロード・アンケート回答もCARELAY上で一元管理し、参加者の意見や事例をAIが分析して次回テーマに反映。</li>
       </ul>
 
-      <h3 class="font-semibold text-blue-700 mt-4">（3）実践研修（対面・全3回）</h3>
+      <h3 class="text-blue-800 font-semibold mt-5">（3）実践研修（対面・全3回）</h3>
       <ul class="list-disc list-inside space-y-1">
         <li>現場事例を題材にしたディスカッション</li>
         <li>他事業所のマニュアル・工夫共有</li>
@@ -52,8 +85,9 @@
       <p class="mt-2">成果物として、全参加事業所から共有された事例と対策を整理した「まとめ資料」を作成し、CARELAY上で配布する。</p>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">4．CARELAYの活用による効果</h2>
+    <!-- 4. CARELAY活用 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">4．CARELAYの活用による効果</h2>
       <ul class="list-disc list-inside space-y-1">
         <li>研修専用ページを設け、動画・資料・スケジュール・連絡事項を一元化。</li>
         <li>会員限定アクセスにより、参加事業所のみが情報閲覧可能。</li>
@@ -62,8 +96,9 @@
       </ul>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">5．広報・参加促進</h2>
+    <!-- 5. 広報・参加促進 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">5．広報・参加促進</h2>
       <ul class="list-disc list-inside space-y-1">
         <li>神戸市提供の事業所リストを基に、対象事業所へメール案内を配信。</li>
         <li>CARELAY内の申込フォームで参加情報を自動収集。</li>
@@ -72,8 +107,9 @@
       </ul>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">6．実施体制</h2>
+    <!-- 6. 実施体制 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">6．実施体制</h2>
       <ul class="list-disc list-inside space-y-1">
         <li><strong>代表講師：</strong>大野 洋（介護施設長経験・現場実務15年以上）</li>
         <li><strong>サポートスタッフ：</strong>必要に応じて手配し、事務・配信・資料整理を補助。</li>
@@ -82,18 +118,22 @@
       </ul>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">7．スケジュール（案）</h2>
+    <!-- 7. スケジュール -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">7．スケジュール（案）</h2>
       <div class="overflow-x-auto">
-        <table class="min-w-full bg-white shadow rounded-md">
+        <table class="min-w-full bg-white rounded-lg shadow-sm">
           <thead class="bg-blue-700 text-white">
-            <tr><th class="py-2 px-4 text-left">月</th><th class="py-2 px-4 text-left">主な内容</th></tr>
+            <tr>
+              <th class="py-2 px-4 text-left">月</th>
+              <th class="py-2 px-4 text-left">主な内容</th>
+            </tr>
           </thead>
           <tbody>
-            <tr><td class="py-2 px-4 border-b">11月</td><td class="py-2 px-4 border-b">事前打合せ・参加募集開始</td></tr>
-            <tr><td class="py-2 px-4 border-b">12月</td><td class="py-2 px-4 border-b">基礎研修①②・実践研修①</td></tr>
-            <tr><td class="py-2 px-4 border-b">1月</td><td class="py-2 px-4 border-b">基礎研修③④・実践研修②</td></tr>
-            <tr><td class="py-2 px-4 border-b">2月</td><td class="py-2 px-4 border-b">基礎研修⑤～⑧・実践研修③</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">11月</td><td class="py-2 px-4">事前打合せ・参加募集開始</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">12月</td><td class="py-2 px-4">基礎研修①②・実践研修①</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">1月</td><td class="py-2 px-4">基礎研修③④・実践研修②</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">2月</td><td class="py-2 px-4">基礎研修⑤～⑧・実践研修③</td></tr>
             <tr><td class="py-2 px-4">3月</td><td class="py-2 px-4">成果資料作成・報告書提出</td></tr>
           </tbody>
         </table>
@@ -101,27 +141,33 @@
       <p class="mt-2 text-sm text-gray-600">※会場は参加申込数に応じて神戸市内公共施設を確保。</p>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">8．経費見積（概要）</h2>
+    <!-- 8. 経費見積 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">8．経費見積（概要）</h2>
       <div class="overflow-x-auto">
-        <table class="min-w-full bg-white shadow rounded-md">
+        <table class="min-w-full bg-white rounded-lg shadow-sm">
           <thead class="bg-blue-700 text-white">
-            <tr><th class="py-2 px-4 text-left">項目</th><th class="py-2 px-4 text-left">概算額（円）</th><th class="py-2 px-4 text-left">備考</th></tr>
+            <tr>
+              <th class="py-2 px-4 text-left">項目</th>
+              <th class="py-2 px-4 text-left">概算額（円）</th>
+              <th class="py-2 px-4 text-left">備考</th>
+            </tr>
           </thead>
           <tbody>
-            <tr><td class="py-2 px-4 border-b">講師謝金・監修費</td><td class="py-2 px-4 border-b">400,000</td><td class="py-2 px-4 border-b">代表・外部講師分</td></tr>
-            <tr><td class="py-2 px-4 border-b">会場費・備品費</td><td class="py-2 px-4 border-b">250,000</td><td class="py-2 px-4 border-b">実践研修3回分</td></tr>
-            <tr><td class="py-2 px-4 border-b">動画制作・配信費</td><td class="py-2 px-4 border-b">300,000</td><td class="py-2 px-4 border-b">基礎研修8本</td></tr>
-            <tr><td class="py-2 px-4 border-b">事務・通信費</td><td class="py-2 px-4 border-b">200,000</td><td class="py-2 px-4 border-b">メール配信・管理</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">講師謝金・監修費</td><td class="py-2 px-4">400,000</td><td class="py-2 px-4">代表・外部講師分</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">会場費・備品費</td><td class="py-2 px-4">250,000</td><td class="py-2 px-4">実践研修3回分</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">動画制作・配信費</td><td class="py-2 px-4">300,000</td><td class="py-2 px-4">基礎研修8本</td></tr>
+            <tr class="border-b"><td class="py-2 px-4">事務・通信費</td><td class="py-2 px-4">200,000</td><td class="py-2 px-4">メール配信・管理</td></tr>
             <tr><td class="py-2 px-4">資料作成・印刷費</td><td class="py-2 px-4">150,000</td><td class="py-2 px-4">成果資料</td></tr>
           </tbody>
         </table>
       </div>
-      <p class="mt-2 text-sm text-gray-600">合計：1,300,000円（税込）　※契約上限1,390,000円以内。</p>
+      <p class="mt-2 text-sm text-gray-700">合計：1,300,000円（税込）　※契約上限1,390,000円以内。</p>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">9．期待される効果</h2>
+    <!-- 9. 期待効果 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">9．期待される効果</h2>
       <ul class="list-disc list-inside space-y-1">
         <li>管理者が自事業所の課題を自覚し、改善を具体化できる。</li>
         <li>他事業所との知見共有により、市全体での対応力が強化される。</li>
@@ -129,21 +175,39 @@
       </ul>
     </section>
 
-    <section>
-      <h2 class="text-xl font-bold border-l-4 border-blue-700 pl-3 mb-3">10．会社概要</h2>
-      <p><strong>法人名：</strong>合同会社WaJu</p>
-      <p><strong>所在地：</strong>〒658-0051　神戸市東灘区住吉東町2丁目7-20 ロジュマン反高102</p>
-      <p><strong>代表者：</strong>大野 洋</p>
-      <p><strong>設立：</strong>令和5年4月27日</p>
-      <p><strong>事業内容：</strong>介護・福祉事業所向けオンライン支援プラットフォーム「CARELAY」の開発・運営、業務支援ツール・教育研修コンテンツの提供、地域連携支援。</p>
+    <!-- 10. 会社概要 -->
+    <section class="section-card p-6 md:p-7 rounded-xl shadow-sm border border-blue-100 fade">
+      <h2 class="section-heading text-xl md:text-2xl font-semibold text-blue-900 mb-3">10．会社概要</h2>
+      <div class="grid md:grid-cols-2 gap-4">
+        <div>
+          <p><strong>法人名：</strong>合同会社WaJu</p>
+          <p><strong>所在地：</strong>〒658-0051　神戸市東灘区住吉東町2丁目7-20 ロジュマン反高102</p>
+          <p><strong>代表者：</strong>大野 洋</p>
+          <p><strong>設立：</strong>令和5年4月27日</p>
+        </div>
+        <div>
+          <p><strong>事業内容：</strong></p>
+          <ul class="list-disc list-inside">
+            <li>介護・福祉事業所向けオンライン支援プラットフォーム「CARELAY」の開発・運営</li>
+            <li>業務支援ツール・教育研修コンテンツの提供</li>
+            <li>地域連携促進・人材定着に関する企画・コンサルティング</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
   </main>
 
-  <footer class="bg-blue-900 text-blue-100 text-center py-6 text-sm">
-    <p>合同会社WaJu｜〒658-0051 神戸市東灘区住吉東町2丁目7-20 ロジュマン反高102</p>
-    <p>Mail: info@waju.co.jp　|　HP: <a href="https://www.waju-llc.com/" class="underline text-blue-200">https://www.waju-llc.com/</a></p>
-    <p>CARELAY: <a href="https://carelay.net/" class="underline text-blue-200">https://carelay.net/</a></p>
+  <!-- FOOTER -->
+  <footer class="hero-grad text-blue-50">
+    <div class="max-w-5xl mx-auto px-5 py-8 text-sm text-center md:text-left">
+      <p class="font-semibold">合同会社WaJu</p>
+      <p>〒658-0051 神戸市東灘区住吉東町2丁目7-20 ロジュマン反高102</p>
+      <p>Mail: <a href="mailto:info@waju.co.jp" class="underline text-blue-100">info@waju.co.jp</a></p>
+      <p>HP: <a class="underline text-blue-100" href="https://www.waju-llc.com/">https://www.waju-llc.com/</a></p>
+      <p>CARELAY: <a class="underline text-blue-100" href="https://carelay.net/">https://carelay.net/</a></p>
+    </div>
   </footer>
+
 </body>
 </html>
