--- a/presentation.html
+++ b/presentation.html
@@ -193,7 +193,7 @@
         <div class="slide-content p-10 bg-white shadow-2xl rounded-2xl hidden" data-slide="1">
             <div class="text-center">
                 <p class="text-xl font-medium text-blue-600 mb-4">令和7年度 介護現場におけるハラスメント対策業務</p>
-                <h1 class="text-5xl font-extrabold text-gray-900 mb-8">神戸市の介護・福祉職員に「持続可能な安心」を</h1>
+                <h1 class="text-5xl font-extrabold text-gray-900 mb-8">神戸市の介護・福祉職員に<br>「持続可能な安心」を</h1>
                 <h2 class="text-3xl font-semibold text-gray-700 mb-16">管理者と職員の双方を守る「組織対応力」強化策</h2>
             </div>
 
