--- a/presentation.html
+++ b/presentation.html
@@ -466,7 +466,7 @@
 
             <div class="mt-12 text-center">
                 <p class="text-3xl font-extrabold text-gray-800 leading-relaxed">
-                    私は、この仕組みを基盤として、<br>
+                    弊社は、この仕組みを基盤として、<br>
                     <strong class="text-blue-700">神戸市全体の対応力向上</strong>に貢献します。
                 </p>
                 <div class="mt-8 text-4xl font-black text-gray-500">
